[ master ] - emacs, add org-capture package.

--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -4884,6 +4884,43 @@ Take the =org-level-1= as an example:
  
 
 
+** =org-capture=
+#+BEGIN_SRC emacs-lisp
+  (use-package org-capture
+  :ensure nil
+  :bind ("C-c ;" . (lambda () (interactive) (org-capture)))
+  :hook ((org-capture-mode . (lambda ()
+                               (setq-local org-complete-tags-always-offer-all-agenda-tags t)))
+         (org-capture-mode . delete-other-windows))
+  :custom
+  (org-capture-use-agenda-date nil)
+  ;; define common template
+  (org-capture-templates `(("t" "Tasks" entry (file+headline "~/sbzi/personal/org-capture/tasks.org" "Reminders")
+                            "* TODO %i%?"
+                            :empty-lines-after 1
+                            :prepend t)
+                           ("n" "Notes" entry (file+headline "~/sbzi/personal/org-capture/capture.org" "Notes")
+                            "* %? %^g\n%i\n"
+                            :empty-lines-after 1)
+                           ;; For EWW
+                           ("b" "Bookmarks" entry (file+headline "~/sbzi/personal/org-capture/capture.org" "Bookmarks")
+                            "* %:description\n\n%a%?"
+                            :empty-lines 1
+                            :immediate-finish t)
+                           ("d" "Diary")
+                           ("dt" "Today's TODO list" entry (file+olp+datetree "~/sbzi/personal/org-capture/diary.org")
+                            "* Today's TODO list [/]\n%T\n\n** TODO %?"
+                            :empty-lines 1
+                            :jump-to-captured t)
+                           ("do" "Other stuff" entry (file+olp+datetree "~/sbzi/personal/org-capture/diary.org")
+                            "* %?\n%T\n\n%i"
+                            :empty-lines 1
+                            :jump-to-captured t)
+                           ))
+  )
+#+END_SRC
+ 
+
 ** Colemak
 
 *** Basic movement and edit
