--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -4137,7 +4137,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
   (defun my-lsp-format-buffer()
     ;;(define-key evil-normal-state-local-map (kbd "<leader>ff") 'lsp-format-buffer)
 
-    (define-key evil-normal-state-local-map (kbd "<leader>ff") 'eglot-format-buffer)
+    (define-key evil-normal-state-local-map (kbd "SPC f f") 'eglot-format-buffer)
 
     (message ">>> [ my-lsp-format-buffer ] Set '<leader>ff' to local buffer")
   )
@@ -4150,7 +4150,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
   (defun my-lsp-rename-buffer()
     ;; (define-key evil-normal-state-local-map (kbd "<leader>rn") 'lsp-rename)
 
-    (define-key evil-normal-state-local-map (kbd "<leader>rn") 'eglot-rename)
+    (define-key evil-normal-state-local-map (kbd "SPC r n") 'eglot-rename)
 
     (message ">>> [ my-lsp-rename-buffer ] Set '<leader>rn' to local buffer")
   )
@@ -4161,8 +4161,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
 
 #+BEGIN_SRC emacs-lisp
   (defun my-lsp-show-error()
-    (define-key evil-normal-state-local-map (kbd "<leader>se") 'flymake-show-buffer-diagnostics)
-    (define-key evil-normal-state-local-map (kbd "C-c s e") 'flymake-show-buffer-diagnostics)
+    (define-key evil-normal-state-local-map (kbd "SPC s e") 'flymake-show-buffer-diagnostics)
 
     (message ">>> [ my-lsp-show-error ] Set '<leader>se' to local buffer")
   )
@@ -4176,8 +4175,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
     ;; (define-key evil-normal-state-local-map (kbd "<leader>ca") 'lsp-execute-code-action)
     ;; (define-key evil-normal-state-local-map (kbd "C-c c a") 'lsp-execute-code-action)
 
-    (define-key evil-normal-state-local-map (kbd "<leader>ca") 'eglot-code-action-quickfix)
-    (define-key evil-normal-state-local-map (kbd "C-c c a") 'eglot-code-action-quickfix)
+    (define-key evil-normal-state-local-map (kbd "SPC c a") 'eglot-code-action-quickfix)
 
     (message ">>> [ my-lsp-code-action ] Set '<leader>ca' to local buffer")
   )
@@ -4188,8 +4186,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
 
 #+BEGIN_SRC emacs-lisp
   (defun my-lsp-toggle-comment()
-    (define-key evil-visual-state-local-map (kbd "<leader>/") 'evilnc-comment-or-uncomment-lines)
-    (define-key evil-visual-state-local-map (kbd "C-c /") 'evilnc-comment-or-uncomment-lines)
+    (define-key evil-visual-state-local-map (kbd "SPC /") 'evilnc-comment-or-uncomment-lines)
 
     (message ">>> [ my-lsp-toggle-comment ] Set '<leader>/' to local buffer")
   )
@@ -4215,8 +4212,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
   )
 
   (defun my-setup-toggle-inlay-hint()
-      (define-key evil-normal-state-local-map (kbd "<leader>th") 'my-lsp-toggle-inlay-hint)
-      (define-key evil-normal-state-local-map (kbd "C-c t h") 'my-lsp-toggle-inlay-hint)
+      (define-key evil-normal-state-local-map (kbd "SPC t h") 'my-lsp-toggle-inlay-hint)
       (message ">>> [ my-setup-toggle-inlay-hint ] Set '<leader>th' to local buffer")
   )
 #+END_SRC
@@ -4245,8 +4241,8 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
              (which-key-add-major-mode-key-based-replacements major-mode "SPC c" "Code actions")
              (which-key-add-major-mode-key-based-replacements major-mode "SPC c a" "Code actions")
              (which-key-add-major-mode-key-based-replacements major-mode "SPC /" "Comment")
-             (which-key-add-major-mode-key-based-replacements major-mode "SPC t" "Toggle hints")
-             (which-key-add-major-mode-key-based-replacements major-mode "SPC t a" "Toggle hints")
+             (which-key-add-major-mode-key-based-replacements major-mode "SPC t" "Toggle")
+             (which-key-add-major-mode-key-based-replacements major-mode "SPC t h" "Toggle hints")
          ))
   )
 
